app/assets/stylesheets/style_guide.css.scss
/* ... */
.expander-content {
  margin-top: 1em;
  color: white;
}

.expander {
  position: relative;
}

.user-followers-wrapper-top, .user-followers-wrapper-bottom {
  text-align: left;
  display: inline-block;
}

.user-followers-wrapper-top {
  margin-right: 4em;
}

.followers-title, .following-title {
  padding: .5em 0 .5em;
  text-decoration: underline;
  color: #999;
  font-family: $headline-font;
  font-size: 1em;
}

.user-followers-containter {
  font-family: $headline-font;
  font-size: 1em;
  color: #222;
  line-height: 1.3em;
}

.expander-profile a:hover {
  color: $alt-top-bg-color;
  text-decoration: none;
}

/****************************************
HOMEPAGE LESSON PREVIEWS
****************************************/
.lesson-preview-link {
  text-decoration: none;
}

.lesson-preview-container {
  margin: 2em auto 6em;
  width: 65%;
  text-align: left;
  position: relative;
  label, p.list {
    color: $alt-top-bg-hover;
    font-family: $headline-font;
  }
  a {
    color: $alt-top-bg-hover;
    font-family: $headline-font;
    text-decoration: none;
  }
  span.document-buttons a {
  text-decoration: none;
  font-family: $headline-font;
  color: $button-bg-hover;
  text-align: right;
  }
  // border: 1px solid white;
  // border-radius: 5px;
}

.lesson-preview-title-container {
  // margin-bottom: 2.5em;
  background: #fcfffe;
  box-shadow: 0 2px 5px rgba(0,0,0,0.18);
  padding: .7em .7em .7em .9em;
  color: #b9bdbd;

}

.lesson-preview-title {
  font-size: 1.75em;
  font-family: $headline-font;
  font-weight: 400;
  color: #807d7f;
  margin-bottom: .3em;
}

// .lesson-preview-subject-container {
//   padding: .5em .5em .5em 1em;
// }
//
// .lesson-preview-subject {
//   font-size: 1.5em;
//   font-family: $headline-font;
//   font-weight: 400;
//   color: #222;
//   margin: .3em .3em .5em 2em;
// }

.lesson-preview-subject-list {
  margin-right: .75em;
  font-size: 1.1em;
  color: #b9bdbd;
}

.lesson-preview-grade-list {
  padding-left: .75em;
  font-size: 1.1em;
  color: #b9bdbd;
}

.lesson-preview-description-container {
  padding: 1em;
  margin-bottom: 2em;
  background-color: #fcfffe;
  border: 1px solid #eee;
  box-shadow: 0 2px 5px rgba(0,0,0,0.18);
}

.lesson-preview-subject-list, .lesson-preview-pipe, .lesson-preview-grade-list,  {
  display: inline;
  font-size: 1em;
  font-family: $headline-font;
  font-weight: 400;
  color: #b9bdbd;

}

.lesson-preview-description {
  font-size: 1.1em;
  font-family: $headline-font;
  font-weight: 400;
  color: #807d7f;
  line-height: 1.4em;
}

.star-ranking {
  text-align: right;
  margin-top: -33px;
  width: 50px;
  margin-left: 720px;
  position: relative;
  top: -7px;
}

.icon-star {
  color: #b9bdbd;
  font-size: 1.5em;
  display: inline;
}

.ranking {
    display: inline-block;
    position: relative;
    top: 50%;
    transform: translateY(-25%);
    font-family: $headline-font;
    font-size: 1.2em;
    margin-left: .25em;
    color: #807d7f;
    letter-spacing: .1em;
}

.lesson-preview-description {
  line-height: 1.4em;
}

/************************************
            SAVE BUTTON
************************************/
.save-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.save-button {
  margin: 0 .5em 0;
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $alt-top-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em .8em 1em;
  text-decoration: none;
  padding: 1em 1.6em 1em;
}

.save-button:hover {
  background: $alt-top-bg-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
            LOG IN BUTTON
************************************/

.login-button-wrapper {
      display: block;
      text-align: center;
      margin: 2em 0 2em;
}

.login-button {
      background-color: $alt-top-bg-color;
      border-radius: .25em;
      color: white;
      font-family: $headline-font;
      font-size: .8em;
      font-weight: bolder;
      text-shadow: none;
      border: none;
      text-align: center;
      padding: 1em 1.6em 1em;
      text-transform: uppercase;
      letter-spacing: .1em;
}

.login-button:hover {
        background-color: $alt-top-bg-hover;
        color: white;
        cursor: pointer;
        text-shadow: none;
        border: none;
        -webkit-transition: .6s;
}


/************************************
            EDIT BUTTON
************************************/
.edit-button-wrapper, .delete-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.edit-button {
  padding: 1em 1.7em 1em;
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $dark-header-color;
  color: #fff;
  border-radius: .25em;
  text-decoration: none;
}

.edit-button:hover {
  background: $dark-header-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
      DELETE  BUTTON
************************************/
.delete-lesson-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.delete-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $button-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em;
  text-decoration: none;
}

.delete-button:hover {
  background: $button-bg-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}
/* ... */

